--- a/ElectionVote/ElectionVote.csproj
+++ b/ElectionVote/ElectionVote.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Services\DTO\Request\CreateUserRequestDto.cs" />
     <Compile Include="Services\DTO\Request\IRequest.cs" />
     <Compile Include="Services\DTO\Response\GetUserResponseDto.cs" />
+    <Compile Include="Services\Interactions\AuthFlow.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
@@ -57,6 +58,7 @@
     <Folder Include="Services\Enums\" />
     <Folder Include="Services\DTO\Response\" />
     <Folder Include="Services\DTO\Request\" />
+    <Folder Include="Services\Interactions\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
