--- a/ElectionVote/ElectionVote.csproj
+++ b/ElectionVote/ElectionVote.csproj
@@ -72,6 +72,8 @@
     <Compile Include="Services\Models\IUpdatable.cs" />
     <Compile Include="Services\DTO\Response\UpdateCandidateResponseDto.cs" />
     <Compile Include="Services\Interactions\CommonFlow.cs" />
+    <Compile Include="Services\Interactions\Tasks\StartElectionFlow.cs" />
+    <Compile Include="Services\DTO\Response\UpdateElectionResponseDto.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
