--- a/ElectionVote/ElectionVote.csproj
+++ b/ElectionVote/ElectionVote.csproj
@@ -85,6 +85,11 @@
     <Compile Include="Services\Actions\RegistrationActions.cs" />
     <Compile Include="Services\DTO\Request\RemoveRegistrationRequestDto.cs" />
     <Compile Include="Services\DTO\Response\RemoveRegistrationResponseDto.cs" />
+    <Compile Include="Services\Interactions\Options\VoteOptionsFlow.cs" />
+    <Compile Include="Services\Interactions\Tasks\Votes\SubmitVoteFlow.cs" />
+    <Compile Include="Services\Actions\BallotPaperActions.cs" />
+    <Compile Include="Services\DTO\Response\GetBallotPaperResponseDto.cs" />
+    <Compile Include="Services\DTO\Request\SubmitBallotPaperRequestDto.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Services\" />
@@ -103,6 +108,7 @@
     <Folder Include="Services\Interactions\Tasks\Elections\" />
     <Folder Include="Services\Interactions\Tasks\Candidates\" />
     <Folder Include="Services\Interactions\Tasks\Registrations\" />
+    <Folder Include="Services\Interactions\Tasks\Votes\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
